# lejeuquiressembleacachecachemaiscestunpaintball

./: .gitignore  .ignore  CMakeLists.txt  README.md  debug.sh  generator.py  justfile  map.txt  map2.txt  multiplayer.c  procgen.py  test_client.py
assets/sound/: source
src/: defines.h  entities.c  entities.h  geo.c  geo.h  log.h  main.c  map.c  map.h  menu.c  menu.h  multiplayer.c  networking.h  player.c  player.h  sound.c  sound.h  unix_networking.c  utils.c  world.c  world.h
